--- a/src/resources/sass/utilities/_index.scss
+++ b/src/resources/sass/utilities/_index.scss
@@ -1,12 +1,10 @@
 @use 'helpers/containers';
-@use 'responsive/flex';
+@use 'helpers/flex';
 @use 'helpers/display';
 @use 'helpers/position';
 @use 'helpers/overflow';
 @use 'helpers/visibility';
 @use 'helpers/z-index';
-@use 'helpers/font-weight';
-
 // Components
 @use '../components/button'; 
 
