--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,1 +1,25 @@
-<h1>footer</h1>
+<footer class="footer">
+  <div class="footer__content">
+    <div class="footer__section">
+      <h3 class="footer__title">About Us</h3>
+      <p class="footer__text">We are a company dedicated to providing the best services to our customers.</p>
+    </div>
+    <div class="footer__section">
+      <h3 class="footer__title">Quick Links</h3>
+      <ul class="footer__links">
+        <li><a href="#" class="footer__link">Home</a></li>
+        <li><a href="#" class="footer__link">About</a></li>
+        <li><a href="#" class="footer__link">Services</a></li>
+        <li><a href="#" class="footer__link">Contact</a></li>
+      </ul>
+    </div>
+    <div class="footer__section">
+      <h3 class="footer__title">Contact</h3>
+      <p class="footer__text">Email: contact@example.com</p>
+      <p class="footer__text">Phone: +1 234 567 890</p>
+    </div>
+  </div>
+  <div class="footer__bottom">
+    <p class="footer__bottom-text">© 2025 Your Company. All rights reserved.</p>
+  </div>
+</footer>
