--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trang Chủ</title>
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
-<body style="height: 10000px;">
+<body class="{{pageClass}}">
     <header>
         {{> header}}
     </header>
@@ -30,9 +30,11 @@
     <footer>
         {{> footer}}
     </footer>
+    
     <script src="/js/navbar.js" defer></script>
     <script src="/js/slider.js" defer></script>
     <script src="/js/flash-sale.js" defer></script>
+    <script src="/js/product-home.js" defer></script>
     
 </body>
 </html>
