--- a/src/resources/views/editProduct.hbs
+++ b/src/resources/views/editProduct.hbs
@@ -1,5 +1,5 @@
 <h1>Edit Product</h1>
-<form action="/edit-product/{{product._id}}" method="POST" enctype="multipart/form-data">
+<form action="/editProduct/{{product._id}}" method="POST" enctype="multipart/form-data">
   <div>
     <label for="name">Product Name:</label>
     <input type="text" name="name" id="name" value="{{product.name}}" required>
